2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ini.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-06-29 Aaron Faupell <afaupell@users.sourceforge.net>

	* ini.tcl: added default value option for value command, and added
	commentchar command. change in comment behavior
	* ini.man: clarifications for open, commit, and comment commands; added
	commentchar command

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* inifile.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* inifile.test: Hooked into the new common test support code.

2005-17-11 Aaron Faupell <afaupell@users.sourceforge.net>

	* ini.tcl: fixed bug causing empty ini files when opening
	with w modes introduced on 2005-31-03

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ini.tcl:       Fix for bug #1280529 - collision with global
	* inifile.test:  variable names. Added tests for these.

2005-31-03 Aaron Faupell <afaupell@users.sourceforge.net>

	* ini.tcl: fixed bug where ini files were corrupted when
                   saving a shorter version. due to not closing
                   and truncating file before writing.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-03-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* inifile.test: Fixed [Tcllib SF Bug 899204] by (a) rewriting all